--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     align-content: center;
-    background: url(./cristo.jpeg);
+    background: url(./cristo2.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -32,16 +32,16 @@ body {
     align-content: center;
 }
 
-
 #eventsContainer {
     border-radius: 5px;
     padding: 10px;
-    width: 600px;
-    margin: 0px auto;
+    width: 90%;
+    margin: 60px auto; /* Reduzco el margen superior para hacer espacio para el h1 */
     display: flex;
     flex-direction: column;
-    
+    gap: 5px;
 }
+
 
 .event{
     display: flex;
@@ -206,58 +206,50 @@ footer p {
         background: url(./cristo2.jpeg);
         background-repeat: no-repeat;
         background-size: cover;
+        background-position: center;
         width: 100vw;
         height: 100vh;
+      
+    }
+
+    #app{
+        width: 70%;
+        height: 90vh;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        align-content: center;
      
     }
     
-    
-    /* #eventName{
-        font-family: 'Mountains of Christmas', serif;
-        font-family: 'Raleway', sans-serif;
-        text-align: center;
-        background: black;
-        color: antiquewhite;
-        margin-top: 10px;
-        border: 2px solid red;
-    }
-     */
-    
-     #app{
-        width: 70%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        align-content: center;
-    }
-    
-    
     #eventsContainer {
-        border-radius: 5px;
-        padding: 10px;
-        width: 600px;
-        margin: 0px auto;
         display: flex;
         flex-direction: column;
-        
+        border-radius: 5px;
+        padding: 10px;
+        width: 90%;
+        margin: 0 auto; 
+        gap: 5px;
     }
+    
     
     .event{
         display: flex;
+        flex-wrap: wrap;
+        margin: 0 auto;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: center
     }
     
     .days{
         position: relative;
-      font-family: sans-serif;
-      text-align: center;
+        font-family: sans-serif;
+        text-align: center;
     }
     
     .days .box {
-        width: 11.875em;
-        height: 15.875em;
+        width: 8em;
+        height: 8em;
         padding: 1rem;
         background-color: rgba(255, 255, 255, 0.074);
         border: 1px solid rgba(255, 255, 255, 0.222);
@@ -267,37 +259,13 @@ footer p {
         transition: all ease .3s;
       }
       
-      .days .box {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-      }
+
     
-    .event .days{
-        text-align: center;
-        width: 150px;
-    }
-    
-    .event .days .days-number{
-        font-size: 50px;
-        font-weight: bold;
-        display: block;
-    }
-    
-    .date-text{
-        font-size: 30px;
-        display: block;
-    }
-    
-    
-    .hours{
-        position: relative;
-        font-family: sans-serif;
-    }
+   
     
     .hours .box {
-        width: 11.875em;
-        height: 15.875em;
+        width: 8em;
+        height: 8em;
         padding: 1rem;
         background-color: rgba(255, 255, 255, 0.074);
         border: 1px solid rgba(255, 255, 255, 0.222);
@@ -307,39 +275,9 @@ footer p {
         transition: all ease .3s;
       }
       
-      .hours .box {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-      }
-    
-    
-    .event .hours{
-        text-align: center;
-        width: 150px;
-    }
-    
-    .event .hours .hours-number{
-        font-size: 50px;
-        font-weight: bold;
-        display: block;
-    }
-    
-    .hour-text{
-        font-size: 30px;
-        display: block;
-    }
-    
-    
-    .minutes{
-        position: relative;
-      font-family: sans-serif;
-    
-    }
-    
     .minutes .box {
-        width: 11.875em;
-        height: 15.875em;
+        width: 8em;
+        height: 8em;
         padding: 1rem;
         background-color: rgba(255, 255, 255, 0.074);
         border: 1px solid rgba(255, 255, 255, 0.222);
@@ -349,28 +287,7 @@ footer p {
         transition: all ease .3s;
       }
       
-      .minutes .box {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-      }
-    
-    .event .minutes{
-        text-align: center;
-        width: 150px;
-    }
-    
-    .event .minutes .minutes-number{
-        font-size: 50px;
-        font-weight: bold;
-        display: block;
-    }
-    
-    .minutes-text{
-        font-size: 30px;
-        display: block;
-    }
-    
+     
     footer{
         display: flex;
         justify-content: center;
@@ -393,20 +310,8 @@ footer p {
         text-align: center;
     }
     
-}
-
-@media screen and (width >= 540px)  {
-
-
-    #eventsContainer {
-        border-radius: 5px;
-        padding: 10px;
-        width: 90%;
-        margin: 60px auto; /* Reduzco el margen superior para hacer espacio para el h1 */
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-    }
     
- 
+    
+    
 }
+
